--- a/sass/features/megamenu.scss
+++ b/sass/features/megamenu.scss
@@ -14,7 +14,7 @@ li.attached-block a {
       & .block {
         position: absolute;
         margin: 0;
-        top: 1.8em;
+        top: 1.7em;
         width: 100%;
       }
     }
